Fix bink decoder for files with 24px width.

Fixes ticket #962.